# Hackaton_Odoo_Training

./: .env  USERS  authentification.py  jaaj  justfile  main.py  pyproject.toml  users.db
javascript/: login.js
templates/: base.jinja2  home.jinja2  login.jinja2  menu.jinja2
