[project]
name = "Hackaton_Odoo_Training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.2",
    "jinja2>=3.1.4",
    "jinja2-fragments>=1.6.0",
    "python-multipart>=0.0.12",
    "pyjwt>=2.9.0"
]
